--- a/libfreerdp/common/CMakeLists.txt
+++ b/libfreerdp/common/CMakeLists.txt
@@ -21,7 +21,8 @@ set(MODULE_PREFIX "FREERDP_COMMON")
 set(${MODULE_PREFIX}_SRCS
 	addin.c
 	settings.c
-	assistance.c)
+	assistance.c
+	wds.c)
 
 freerdp_module_add(${${MODULE_PREFIX}_SRCS})
 
